Refactoring return list streams