@@ -8,7 +8,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class LandProbeService {
@@ -23,7 +22,7 @@ public class LandProbeService {
             probe.executeCommands(register.getKey().toCharArray());
             planetsRepository.save(probe.getPlanet());
             return probe;
-        }).collect(Collectors.toList());
+        }).toList();
         executedMoves.forEach(probe -> probesRepository.save(probe));
         return executedMoves;
     }
